# Hybrid

./: README.md  pyproject.toml
.github/scripts/setup/: configure-project.sh
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  validate-hybrid.yml  validate.yml
src/hybrid/: __init__.py  hybrid.py  hybrid_example.py  test_definitions.py
src/hybridz/: __init__.py  test_definitions.py
tests/: test_main.py
